--- a/src/pages/story.astro
+++ b/src/pages/story.astro
@@ -42,10 +42,10 @@ import Layout from "../layouts/Layout.astro";
           <p class="greeting">Hi there, I'm Sidharth 👋</p>
 
           <p class="intro-paragraph">
-            I'm a final year Computer Science student at the Odisha University
-            of Technology and Research in Bhubaneswar, India. I'm a fullstack
-            developer with over 2 years of experience crafting applications that
-            solve real problems.
+            I'm a Software Engineer II at Builder.io, where I'm currently
+            working on world-class software that empowers developers globally.
+            I'm a fullstack developer with over 3 years of experience crafting
+            applications that solve real problems.
           </p>
 
           <p class="intro-paragraph emphasis">
