--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -289,7 +289,7 @@ blogs = blogs.splice(0, 3);
     }
 
     .timeline-year {
-        margin-bottom: 3rem;
+        margin-bottom: 0;
     }
 
     .year-heading {
